src/test/deca/context/invalid/operations/bool/invalid_bool_op_eq_int.deca
// Description:
//    test invalid EQ between boolean and int
//
// [Begin Result]
//invalid_bool_op_eq_int.deca:12:21: Unsupported operation '==' between types boolean and int. (Rule 3.33)
// [End Result]
//
// Historique:
//    cree le 02/01/2025

{
    boolean a = true == 43;
}